--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
      </div>
 </main> -->
 
-<main class="w-full bg-light dark:bg-dark flex flex-col flex-1">
+<main class="w-full bg-light dark:bg-dark flex flex-col flex-1 padding-top-16">
     <div class="order-2 sm:order-1 mx-0 margin-inline-7 padding-inline-4 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
         <div class="inline-block text-center whitespace-nowrap overflow-hidden rtl">
             @for (item of categories; track item.title) {
@@ -108,9 +108,12 @@
             </div>
         </div>
     </div>
-    <div class="order-4 mx-0 margin-inline-7">
+    <div *ngIf="currenTemptList2" class="order-4 mx-0 margin-inline-7">
         @for (item of currenTemptList2; track item.id) {
             <currency-item [currencyItem]="item"/>
         }
+    </div>
+    <div *ngIf="!currenTemptList2" class="order-4 mx-0 margin-inline-7 h-12 bg-amber-500">
+        
     </div>
 </main>
