--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -113,7 +113,18 @@
             <currency-item [currencyItem]="item"/>
         }
     </div>
-    <div *ngIf="!currenTemptList2" class="order-4 mx-0 margin-inline-7 h-12 bg-amber-500">
-        
+    <div *ngIf="!currenTemptList2" class="order-5 mx-0 w-full margin-inline-7 bg-amber-500">
+        <div class="h-100 w-full">
+
+        </div>
+        <div class="h-100 w-full">
+
+        </div><div class="h-100 w-full">
+
+        </div><div class="h-100 w-full">
+
+        </div><div class="h-100 w-full">
+
+        </div>
     </div>
 </main>
