--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,9 @@
 
-.text-2xs {
-    font-size: 0.625rem;
-    line-height: calc(1 / 0.625);
-}
+
 .margin-inline-7 {
     margin-inline: 0;
 }
+
 
 .padding-top-16 {
     padding-top: 4rem;
@@ -44,6 +42,14 @@
 
 .padding-inline-4 {
     padding-inline: 1rem;
+}
+
+.padding-inline-8 {
+    padding-inline: 1.3rem;
+}
+
+.padding-inline-0\.25 {
+    padding-inline: 0.25rem;
 }
 
 .padding-block-1 {
@@ -99,5 +105,15 @@
     .padding-vertical-3 {
         padding-top: 1.2rem;
         padding-bottom: 1.2rem;
+    }
+}
+
+
+@keyframes tranlate-entry {
+    0% {
+        transform: translateY(100px);
+    }
+    100% {
+        transform: translateY(0);
     }
 }
