24h changes percentage changed when toggle between USD/IRT

--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -1,16 +1,24 @@
-<article class="min-h-[4.853rem] padding-inline-4 sm:min-h-[5.8rem] w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border md:hover:bg-light-hover md:hover:dark:bg-dark-hover hover:cursor-pointer">
+<article class="min-h-[4.853rem] padding-inline-4 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border md:hover:bg-light-hover md:hover:dark:bg-dark-hover hover:cursor-pointer">
     <div class="justify-start items-center gap-1.5 w-[20%] hidden md:flex">
         <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal"></i>
         <strong class="text-dark-text3 dark:text-light-text3 font-normal font-yekan">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
-        <strong class="font-normal font-vazir text-xs {{currencyItem?.lastPriceInfo?.dt === 'low' ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{currencyItem?.lastPriceInfo?.dt === 'low' ? '-' : '+'}}{{currencyItem?.lastPriceInfo?.dp}}%</strong>
+        
+        <!-- <strong class="font-normal font-vazir text-xs {{(currencyItem?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{ currencyItem?.lastPriceInfo?.dp}}%</strong> -->
+        <strong class="font-normal font-vazir text-xs {{(showCurrencyId === 0 && currencyItem?.rialChangeState === 'low') || (showCurrencyId === 1 && currencyItem?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(showCurrencyId === 0 && currencyItem?.rialChangeState === 'low') || (showCurrencyId === 1 && currencyItem?.dollarChangeState === 'low') ? '-' : '+'}}{{showCurrencyId === 0 ? currencyItem?.rialChanges : currencyItem?.dollarChanges}}%</strong>
     </div>
-    <div class="flex flex-col items-end justify-center w-[25%]">    
+    <div class="flex flex-col items-end justify-center w-[25%] relative">    
         <strong *ngIf="currencyItem?.groupName !== 'World_Market'" class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">{{showCurrencyId === 0 ? currencyItem?.tomanStringPrice : currencyItem?.dollarStringPrice }}</strong>
         <strong *ngIf="currencyItem?.groupName === 'World_Market'" class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">{{ currencyItem?.lastPriceInfo?.p }}</strong>
-        <div class="flex justify-center items-start gap-2">
-            <i *ngIf="currencyItem?.poundAsk" class="bi bi-info-circle-fill text-2xs md:text-sm text-dark-text2 dark:text-light-text2 relative peer-hover:flex"><div class="peer z-[3] hidden relative bg-amber-600 rounded-md after:content-[''] after:absolute after:top-0 after:left-1/2 after:w-4 after:h-8"></div></i>
+        <div class="flex justify-center items-start gap-2 relative">
+            <div *ngIf="currencyItem?.poundAsk" class="flex justify-center items-start relative">
+                <!-- <div class="z-[3] absolute flex flex-col top-0 right-4 h-12 justify-center items-end w-34 speech-bubble">
+                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text">قیمت اصلی: {{currencyItem?.lastPriceInfo?.p}} یورو</p>
+                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text">نرخ تبدیل: {{currencyItem?.poundAsk}}</p>
+                </div> -->
+                <i class="hover:cursor-pointer bi bi-info-circle-fill text-2xs md:text-sm text-dark-text2 dark:text-light-text2 relative"></i>
+            </div>
             <strong class="{{currencyItem?.groupName !== 'World_Market' ? 'opacity-100' : 'opacity-0'}} text-dark-text2 dark:text-light-text2 font-normal font-yekan text-2xs md:text-sm">{{showCurrencyId === 0 ? 'تومان' : 'دلار'}}</strong>
         </div>
     </div>
