--- a/src/app/currency-item/currency-item.component.css
+++ b/src/app/currency-item/currency-item.component.css
@@ -3,6 +3,27 @@
     padding-inline: 1rem;
 }
 
+.speech-bubble {
+	position: relative;
+	background: #00aabb;
+	border-radius: .4em;
+    padding-inline: 0.3rem;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 0.813em solid transparent;
+	border-left-color: #00aabb;
+	border-right: 0;
+	margin-top: -0.812em;
+	margin-right: -0.812em;
+}
+
 
 @media (width >= 40rem /* 640px */) {
     .padding-inline-4 {
