Preload Pulse animation added, Save/Load theme improved

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="fixed z-[3] bg-light dark:bg-dark w-full h-16 flex items-center justify-start border-b border-b-light-border dark:border-b-dark-border">
     <div class="w-6 h-6 cursor-pointer flex justify-center items-center" (click)="changeTheme()">
         <svg
-            *ngIf="!isDark"
+            *ngIf="themeService.getStringTheme() === 'light'"
             class="fill-dark-text2 dark:fill-light-text2 hover:fill-light-green-text hover:dark:fill-dark-green-text"
             version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             viewBox="0 0 81.289 81.289"
@@ -17,8 +17,8 @@
         </svg>
 
         <svg
+            *ngIf="themeService.getStringTheme() === 'dark'"
             class="w-6 h-6 fill-dark-text2 dark:fill-light-text2 hover:fill-light-green-text hover:dark:fill-dark-green-text"
-            *ngIf="isDark"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
         >
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7.11628C9.3028 7.11628 7.11628 9.3028 7.11628 12C7.11628 14.6972 9.3028 16.8837 12 16.8837C14.6972 16.8837 16.8837 14.6972 16.8837 12C16.8837 9.3028 14.6972 7.11628 12 7.11628ZM5.72093 12C5.72093 8.53217 8.53217 5.72093 12 5.72093C15.4678 5.72093 18.2791 8.53217 18.2791 12C18.2791 15.4678 15.4678 18.2791 12 18.2791C8.53217 18.2791 5.72093 15.4678 5.72093 12Z"/>
