--- a/src/app/empty-item/empty-item.component.html
+++ b/src/app/empty-item/empty-item.component.html
@@ -1,15 +1,15 @@
-<div class="min-h-[4.853rem] animate-pulse duration-300 padding-inline-4 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
+<div class="min-h-[4.853rem] animate-pulse padding-inline-4 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
     <div class="justify-start items-center gap-1.5 w-[20%] hidden md:flex">
         <i class="text-xs opacity-0 bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal"></i>
-        <strong class="font-normal font-yekan animate-pulse bg-light-border dark:bg-dark-border text-transparent">اطلاعات بیشتر</strong>
+        <strong class="font-normal font-yekan animate-pulse bg-light-border dark:bg-dark-border text-transparent rounded-sm">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
         
         <!-- <strong class="font-normal font-vazir text-xs {{(currencyItem?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{ currencyItem?.lastPriceInfo?.dp}}%</strong> -->
-        <strong class="font-normal font-vazir text-xs text-transparent animate-pulse bg-light-border dark:bg-dark-border">+1.3%</strong>
+        <strong class="font-normal font-vazir text-xs text-transparent rounded-sm animate-pulse bg-light-border dark:bg-dark-border">+1.3%</strong>
     </div>
     <div class="flex flex-col items-end justify-center w-[25%] relative">    
-        <strong class="text-transparent animate-pulse bg-light-border dark:bg-dark-border font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">112,000</strong>
+        <strong class="text-transparent rounded-sm animate-pulse bg-light-border dark:bg-dark-border font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">112,000</strong>
         <strong class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5 opacity-0">112</strong>
         <div class="flex justify-center items-start gap-2 relative">
             <strong class="text-dark-text2 dark:text-light-text2 font-normal font-yekan text-2xs md:text-sm"></strong>
@@ -18,7 +18,7 @@
     <div class="flex justify-end items-start gap-1.5 flex-1">
         <div class="flex pl-0.5 overflow-hidden text-ellipsis">
             <div class="flex flex-col items-end justify-start">
-                <p class="text-transparent animate-pulse bg-light-border dark:bg-dark-border order-2 sm:order-1 w-full text-end font-byekan-plus text-2xs sm:text-xs md:text-base leading-6">US Dollar</p>
+                <p class="text-transparent rounded-sm animate-pulse bg-light-border dark:bg-dark-border order-2 sm:order-1 w-full text-end font-byekan-plus text-2xs sm:text-xs md:text-base leading-6">US Dollar</p>
                 <p class="text-dark order-1 sm:order-2 mt-1 whitespace-nowrap ml-1 dark:text-light sm:text-dark-text2 sm:dark:text-light-text2 font-normal text-xs sm:text-sm"></p>
             </div>
         </div>
