--- a/src/app/currency-item/currency-item.component.html
+++ b/src/app/currency-item/currency-item.component.html
@@ -8,15 +8,17 @@
         <!-- <strong class="font-normal font-vazir text-xs {{(currencyItem?.lastPriceInfo?.dt === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(currencyItem?.lastPriceInfo?.dt === 'low') ? '-' : '+'}}{{ currencyItem?.lastPriceInfo?.dp}}%</strong> -->
         <strong class="font-normal font-vazir text-xs {{(showCurrencyId === 0 && currencyItem?.rialChangeState === 'low') || (showCurrencyId === 1 && currencyItem?.dollarChangeState === 'low') ? 'text-light-red-text dark:text-dark-red-text' : 'text-light-green-text dark:text-dark-green-text'}}">{{(showCurrencyId === 0 && currencyItem?.rialChangeState === 'low') || (showCurrencyId === 1 && currencyItem?.dollarChangeState === 'low') ? '-' : '+'}}{{showCurrencyId === 0 ? currencyItem?.rialChanges : currencyItem?.dollarChanges}}%</strong>
     </div>
-    <div class="flex flex-col items-end justify-center w-[25%] relative">    
+    <div class="flex flex-col items-end justify-center w-[25%] relative">
+
         <strong *ngIf="currencyItem?.groupName !== 'World_Market'" class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">{{showCurrencyId === 0 ? currencyItem?.tomanStringPrice : currencyItem?.dollarStringPrice }}</strong>
         <strong *ngIf="currencyItem?.groupName === 'World_Market'" class="text-dark-text dark:text-light-text font-normal font-vazir text-xs md:text-sm leading-4.5 md:leading-5">{{ currencyItem?.lastPriceInfo?.p }}</strong>
-        <div class="flex justify-center items-start gap-2 relative">
-            <div *ngIf="currencyItem?.poundAsk" class="flex justify-center items-start relative">
-                <!-- <div class="z-[3] absolute flex flex-col top-0 right-4 h-12 justify-center items-end w-34 speech-bubble">
-                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text">قیمت اصلی: {{currencyItem?.lastPriceInfo?.p}} یورو</p>
-                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text">نرخ تبدیل: {{currencyItem?.poundAsk}}</p>
-                </div> -->
+        <div class="flex justify-center items-start gap-2 relative ">
+            
+            <div *ngIf="currencyItem?.poundAsk" class="flex justify-center items-start relative">   
+                <div class="z-[3] absolute flex flex-col bottom-[-0.8rem] h-12 justify-center items-end w-34 speech-bubble">
+                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text ">قیمت اصلی: {{currencyItem?.lastPriceInfo?.p}} یورو</p>
+                    <p class="text-xs font-vazir rtl text-dark-text dark:text-light-text ">نرخ تبدیل: {{currencyItem?.poundAsk}}</p>
+                </div>
                 <i class="hover:cursor-pointer bi bi-info-circle-fill text-2xs md:text-sm text-dark-text2 dark:text-light-text2 relative"></i>
             </div>
             <strong class="{{currencyItem?.groupName !== 'World_Market' ? 'opacity-100' : 'opacity-0'}} text-dark-text2 dark:text-light-text2 font-normal font-yekan text-2xs md:text-sm">{{showCurrencyId === 0 ? 'تومان' : 'دلار'}}</strong>
