--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -104,14 +104,14 @@
             </div>
         </div>
     </div>
-    <div *ngIf="currenTemptList2?.length !== 0" class="order-4 mx-0 margin-inline-7">
+    <div *ngIf="currenTemptList?.length !== 0" class="order-4 mx-0 margin-inline-7">
         @for (item of currenTemptList2; track item.id) {
             <currency-item [showCurrencyId]="currentSupportCurrencyId" [currencyItem]="item"/>
         }
         
     </div>
     <div
-        *ngIf="currenTemptList2?.length === 0"
+        *ngIf="currentCategory() !== 'دیده بان' && currenTemptList?.length === 0"
         class="order-5 mx-0 margin-inline-7"
         >
         <empty-item />
