--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,8 +11,10 @@
 </main> -->
 
 <main class="w-full bg-light dark:bg-dark flex flex-col flex-1 padding-top-16">
-    <div class="order-2 sm:order-1 mx-0 margin-inline-7 padding-inline-4 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
-        <div class="inline-block text-center whitespace-nowrap overflow-hidden rtl">
+    <div class="order-2 relative sm:order-1 mx-0 margin-inline-7 padding-inline-4 overflow-hidden flex justify-end bg-light dark:bg-dark border-b border-b-light-text2 dark:border-b-dark-text2">
+        
+        
+        <div #scrollViewCategory (scroll)="onScrollCategoryEventHandler()" class="inline-block text-center whitespace-nowrap overflow-hidden rtl">
             @for (item of categories; track item.title) {
                 <div class="inline-block text-center align-middle margin-left-1">
                     <div class="flex flex-col justify-center items-center relative">
@@ -27,6 +29,18 @@
                     </div>
                 </div>
             }
+        </div>
+        
+        <div #rightCategoryArrow [class.hidden]="!showRightCategoryArrow()" id="rightCategoryArrow" class="absolute h-[99%] text-start align-middle right-0 top-1/2 -translate-y-1/2 padding-block-1-arrow padding-inline-1-arrow bg-light dark:bg-dark w-10">
+            <div (click)="categoryRight()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
+                <i class="bi text-xs sm:text-base bi-caret-right-fill text-dark-text2 dark:text-light-text2"></i>
+            </div>
+        </div>
+
+        <div #leftCategoryArrow [class.hidden]="!showLeftCategoryArrow()" id="leftCategoryArrow" class="absolute h-[99%] text-end align-middle left-0 top-1/2 -translate-y-1/2 padding-block-1-arrow padding-inline-1-arrow bg-light dark:bg-dark w-10">
+            <div (click)="categoryLeft()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
+                <i class="bi text-xs sm:text-base bi-caret-left-fill text-dark-text2 dark:text-light-text2"></i>
+            </div>
         </div>
     </div>
 
@@ -61,7 +75,7 @@
             <div (click)="subCategoryLeft()" class="h-4 w-4 sm:w-8 sm:h-8 flex justify-center items-center translate-y-4 dark:bg-dark-highlight rounded-md hover:cursor-pointer">
                 <i class="bi text-xs sm:text-base bi-caret-left-fill text-dark-text2 dark:text-light-text2"></i>
             </div>
-        </div> 
+        </div>
 
         <div #scrollViewSubCategory (scroll)="onScrollEventHandler()" class="scroll-hide w-full overflow-x-scroll scroll-smooth scroll-snap-x text-right whitespace-nowrap">
             <div class="inline-block scroll-hide w-full">
